deployment-nodejs.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: node-app
spec:
  replicas: 2
  selector:
    matchLables:
      app: nodejs
  template: 
    metadata: 
      labels: 
        app: nodejs
    spec:
      containers:
       - name: node-app-container
         image: smitalipatekar/node-app
