ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs- ingress
  annotations:
    nginx.ingress.kubernetes.io/
rewrite-target: /
spec:
  rules:
    - host: nodejsapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: nodejs-service
                port: 
                  number: 80
